@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-19T16:42:06Z",
+  "timestamp" : "2022-05-20T01:20:23Z",
   "count_outdated" : 232,
   "uniques_outdated" : 154,
-  "count" : 278,
-  "uniques" : 178,
+  "count" : 276,
+  "uniques" : 177,
   "clones" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ]
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
