@@ -1,3 +1,10 @@
+2022-05-20T01:20:23Z:
+* notice: last 14d: unq all: 10 44
+* notice: prev accum: outdated-unq outdated-all / unq all: 154 232 / 178 278
+* notice: next accum: outdated-unq outdated-all / unq all: 154 232 / 177 276
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -2 / +0 +0 -1 -2 / 1 1
+* notice: changed dates: [2022-05-06]
+
 2022-05-19T16:42:06Z:
 * notice: last 14d: unq all: 10 46
 * notice: prev accum: outdated-unq outdated-all / unq all: 151 228 / 177 276
